WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178953
[WebGL] Optimization to skip painting if texture and source surface hasn't changed isn't working; re-optimize.
https://bugs.webkit.org/show_bug.cgi?id=178953
Summary
[WebGL] Optimization to skip painting if texture and source surface hasn't ch...
Jer Noble
Reported
2017-10-27 14:24:46 PDT
[WebGL] Optimization to skip painting if texture and source surface hasn't changed isn't working; re-optimize.
Attachments
Patch
(9.85 KB, patch)
2017-10-27 14:32 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(9.85 KB, patch)
2017-10-27 14:38 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-10-27 14:32:43 PDT
Created
attachment 325199
[details]
Patch
Jer Noble
Comment 2
2017-10-27 14:38:27 PDT
Created
attachment 325200
[details]
Patch for landing
Radar WebKit Bug Importer
Comment 3
2017-10-27 14:43:22 PDT
<
rdar://problem/35229056
>
WebKit Commit Bot
Comment 4
2017-10-30 15:44:00 PDT
Comment on
attachment 325200
[details]
Patch for landing Clearing flags on attachment: 325200 Committed
r224207
: <
https://trac.webkit.org/changeset/224207
>
WebKit Commit Bot
Comment 5
2017-10-30 15:44:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug