Source/WebCore/platform/graphics/GraphicsContext3D.h
@@ -1285,6 +1285,9 @@ public:
 
     void setFailNextGPUStatusCheck() { m_failNextStatusCheck = true; }
 
+    GC3Denum activeTextureUnit() const { return m_state.activeTextureUnit; }
+    GC3Denum currentBoundTexture() const { return m_state.currentBoundTexture(); }
+    GC3Denum currentBoundTarget() const { return m_state.currentBoundTarget(); }
     unsigned textureSeed(GC3Duint texture) { return m_state.textureSeedCount.count(texture); }
 
 private:
@@ -1431,7 +1434,7 @@ private:
 
     struct GraphicsContext3DState {
         GC3Duint boundFBO { 0 };
-        GC3Denum activeTexture { GraphicsContext3D::TEXTURE0 };
+        GC3Denum activeTextureUnit { GraphicsContext3D::TEXTURE0 };
 
         using BoundTextureMap = HashMap<GC3Denum,
             std::pair<GC3Duint, GC3Denum>,
@@ -1440,8 +1443,8 @@ private:
             WTF::PairHashTraits<WTF::UnsignedWithZeroKeyHashTraits<GC3Duint>, WTF::UnsignedWithZeroKeyHashTraits<GC3Duint>>
         >;
         BoundTextureMap boundTextureMap;
-        GC3Duint currentBoundTexture() { return boundTexture(activeTexture); }
-        GC3Duint boundTexture(GC3Denum textureUnit)
+        GC3Duint currentBoundTexture() const { return boundTexture(activeTextureUnit); }
+        GC3Duint boundTexture(GC3Denum textureUnit) const
         {
             auto iterator = boundTextureMap.find(textureUnit);
             if (iterator != boundTextureMap.end())
@@ -1449,7 +1452,8 @@ private:
             return 0;
         }
 
-        GC3Denum boundTarget(GC3Denum textureUnit)
+        GC3Duint currentBoundTarget() const { return boundTarget(activeTextureUnit); }
+        GC3Denum boundTarget(GC3Denum textureUnit) const
         {
             auto iterator = boundTextureMap.find(textureUnit);
             if (iterator != boundTextureMap.end())
